# freewillai

./: .gitignore  README.md  demo.ipynb  demo.py  install_dependencies.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
contracts/: TaskRunner.sol  TaskRunnerABI.json
freewillai/: __init__.py  common.py  constants.py  contract.py  converter.py  core.py  exceptions.py  globals.py  node.py  utils.py
src/: common.py  core.py  doctypes.py  globals.py  transforms.py
web/.ipynb_checkpoints/: demo-checkpoint.ipynb
web/demo_repl/: repl.html  repl.js
